--- a/working-with-containers/react-app/Dockerfile
+++ b/working-with-containers/react-app/Dockerfile
@@ -1,8 +1,10 @@
 FROM node:18-alpine
 
+RUN addgroup app && adduser -S -G app app
+RUN mkdir data
+RUN chown -R app:app /data
 WORKDIR /app
 COPY package*.json ./
-RUN addgroup app && adduser -S -G app app
 RUN chown -R app:app /app
 USER app
 RUN npm install
