set production configurations for aws

--- a/docker-compose/vidly/docker-compose.prod.yml
+++ b/docker-compose/vidly/docker-compose.prod.yml
@@ -2,28 +2,26 @@ version: "3.8"
 
 services:
   web:
-    build: ./frontend
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile.prod
     ports:
-      - 3000:3000
-  web-tests:
-    image: vidly_web
-    volumes:
-      - ./frontend:/app
-    command: npm test
+      - 80:80
+    restart: unless-stopped 
   api:
     build: ./backend
     ports:
      - 3001:3001
     environment:
       DB_URL: mongodb://db/vidly
-    volumes:
-      - ./backend:/app
     command: ./docker-entrypoint.sh
+    restart: unless-stopped 
   db:
     image: mongo:4.0-xenial
     ports: 
       - 27017:27017
     volumes: 
       - vidly:/data/db
+    restart: unless-stopped 
 volumes:
   vidly:
